correct spacing

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -38,17 +38,17 @@ h2 {
   text-align: center;
   font-size: clamp(1.2rem, calc(0.8rem + 1.7vw), 3rem);
   font-weight: 200;
-  color: #a3a5ae; }
+  color: #4c4e61; }
   @media (min-width: 75rem) {
     .hero {
-      margin-top: 10rem;
-      font-size: clamp(1.2rem, calc(0.4rem + 1vw), 3rem); } }
+      margin: 12rem auto 10rem auto;
+      font-size: clamp(1.2rem, calc(0.4rem + 0.7vw), 2rem); } }
 
 .hero p {
   margin: 1.5rem 3rem; }
   @media (min-width: 75rem) {
     .hero p {
-      margin: 0 3rem; } }
+      margin: 0 10rem; } }
 
 main {
   width: 90%;
@@ -70,19 +70,22 @@ main {
   border-radius: 5px;
   display: flex;
   flex-direction: column; }
+  @media (min-width: 75rem) {
+    .card {
+      gap: 1em; } }
   .card__title {
     color: #4c4e61;
     font-size: clamp(1.8rem, calc(1.2rem + 2vw), 4rem); }
     @media (min-width: 75rem) {
       .card__title {
-        font-size: clamp(1.8rem, calc(0.8rem + 0.7vw), 3rem); } }
+        font-size: clamp(1.8rem, calc(0.8rem + 1vw), 3rem); } }
   .card__p {
     margin-bottom: 3em;
     font-size: clamp(1rem, calc(0.8rem + 1.6vw), 2rem);
-    color: #a3a5ae; }
+    color: #4c4e61; }
     @media (min-width: 75rem) {
       .card__p {
-        font-size: clamp(1rem, calc(0.2rem + 0.7vw), 3rem); } }
+        font-size: clamp(1rem, calc(0.3rem + 0.8vw), 3rem); } }
   .card__icon {
     width: 4.5rem;
     height: 4.5rem;
